#
# PM2: Parallel Multithreaded Machine
# Copyright (C) 2010 "the PM2 team" (see AUTHORS file)
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#


include_scheddir = 		$(includedir)/scheduler
nobase_include_sched_HEADERS = 	marcel_bubble_helper.h marcel_bubble_sched_types.h\
				linux_sched.h marcel_bubble_sched_interface.h\
				marcel_bubble_sched.h inlinefunctions/linux_sched.h\
				inlinefunctions/marcel_bubble_sched.h\
				inlinefunctions/linux_runqueues.h\
				inlinefunctions/marcel_holder.h\
				inlinefunctions/marcel_sched.h\
				inlinefunctions/allfunctions.h\
				linux_runqueues.h profiles/marcel_bubble_cache.h\
				profiles/marcel_bubble_null.h\
				profiles/marcel_bubble_memory.h\
				profiles/marcel_bubble_gang.h\
				profiles/marcel_bubble_explode.h\
				profiles/marcel_bubble_spread.h\
				profiles/marcel_bubble_steal.h\
				marcel_holder.h marcel_sched.h\
				marcel_sched_types.h marcel_bubble_browse.h\
				marcel_bubble_distribution.h
